--- a/blogDiary.html
+++ b/blogDiary.html
@@ -279,8 +279,114 @@
 
             </div>
         </div>
-
+        <div class="rightFourthL">
+            <div class="slide">
+                <div class="title">猜你喜欢</div>
+                <ul class="rightFourthLists">
+                    <li>
+                        <a href="">安静地做一个爱设计的女子</a>
+                    </li>
+                    <li>
+                        <a href="">十条设计原则教你学会如何设计网页布局!</a>
+                    </li>
+                    <li>
+                        <a href="">Come on,行动起来吧!我们和时间来一场赛跑!</a>
+                    </li>
+                    <li>
+                        <a href="">作为一个设计师,如果遭到质疑你是否能恪守自己的原则?</a>
+                    </li>
+                    <li>
+                        <a href="">CSS3 Maker 在线生成代码</a>
+                    </li>
+                    <li>
+                        <a href="">个人博客用帝国cms 自定义页面 灵动标签调用网站所有信息</a>
+                    </li>
+                    <li>
+                        <a href="">即便是坑，我也想要拉你入伙！</a>
+                    </li>
+                    <li>
+                        <a href="">遇见一个未知的你</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="rightFifth">
+            <ul>
+                <a href="">
+                    <img src="./image/hexi.jpg" alt="">
+                </a>
+            </ul>
+        </div>
+        <div class="rightSixth">
+            <div class="slide">
+                <div class="title">站点信息</div>
+                <ul>
+                    <li class="rightSixthLi">
+                        <b>建站时间</b>“2019-05-08”
+                    </li>
+                    <li>
+                        <b>网站程序</b>帝国CMS7.5
+                    </li>
+                    <li>
+                        <b>主题模板</b>:
+                        <a href="">《今夕何夕》</a>
+                    </li>
+                    <li>
+                        <b>文章统计</b>:
+                        <a href="">31</a>篇文章
+                    </li>
+                    <li>
+                        <b>标签管理</b>:
+                        <a href="">标签云</a>
+                    </li>
+                    <li>
+                        <b>统计数据</b>:
+                        <a href="">百度统计</a>
+                    </li>
+                    <li>
+                        <b>微信公众号</b>：扫描二维码，关注我们
+                    </li>
+                    <li class="ma">
+                        <a href="">
+                            <img src="./image/ma.png" alt="">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
+</div>
+
+<!--footer-->
+<div class="footer">
+    <div class="box">
+        <div class="wx">
+            <ul>
+                <li>
+                    <img src="./image/ma.png" alt="">
+                    <span>微信公众号</span>
+                </li>
+                <li>
+                    <img src="./image/ma.png" alt="">
+                    <span>我的微信</span>
+                </li>
+            </ul>
+        </div>
+        <div class="text">
+            <p>
+                <b>站点声明</b>
+            </p>
+            <p>
+                1、这是yhm第一次使用HTML5和CSS3完成的页面
+            </p>
+            <p>
+                2、这是yhm第一次使用HTML5和CSS3完成的页面
+            </p>
+        </div>
+    </div>
+    <a href="">
+        <div class="top"></div>
+    </a>
 </div>
 </body>
 </html>
