--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>闫慧敏个人博客</h1>
         <ul class="nav">
             <li><a href="" style="color: #00c1de">网站首页</a></li>
-            <li><a href="http://jxhx2.yangqq.com/blog/">个人博客日记</a></li>
+            <li><a href="">个人博客日记</a></li>
             <li><a href="">网站制作</a></li>
             <li><a href="">设计心得</a></li>
             <li><a href="">关于我</a></li>
