--- a/details.html
+++ b/details.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>详情</title>
     <link rel="stylesheet" href="./css/details.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1194373_jipjuqd4d8.css">
 </head>
 <body>
 
@@ -12,16 +13,16 @@
     <div class="headerBox">
         <h1>闫慧敏个人博客</h1>
         <ul class="nav">
-            <li><a href="">网站首页</a></li>
+            <li><a href="./index.html">网站首页</a></li>
             <li><a href="" style="color: #00c1de">个人博客日记</a></li>
             <li><a href="">网站制作</a></li>
             <li><a href="">设计心得</a></li>
-            <li><a href="">关于我</a></li>
-            <li><a href="">时间轴</a></li>
+            <li><a href="./aboutMe.html">关于我</a></li>
+            <li><a href="./time.html">时间轴</a></li>
             <li><a href="">博客导航</a></li>
             <li><a href="">留言</a></li>
         </ul>
-        <div class="search"></div>
+        <div class="iconfont icon-fangdajing"></div>
     </div>
 </div>
 
