--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>个人博客</title>
     <style>
 
     </style>
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1194373_su7y8ewz5gi.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1194373_sdwxh3wps08.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1194373_df19ud7lv9.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1194373_jipjuqd4d8.css">
 </head>
 <body>
 <!--header-->
@@ -15,15 +21,15 @@
         <h1>闫慧敏个人博客</h1>
         <ul class="nav">
             <li><a href="" style="color: #00c1de">网站首页</a></li>
-            <li><a href="">个人博客日记</a></li>
+            <li><a href="./blogDiary.html">个人博客日记</a></li>
             <li><a href="">网站制作</a></li>
             <li><a href="">设计心得</a></li>
-            <li><a href="">关于我</a></li>
-            <li><a href="">时间轴</a></li>
+            <li><a href="./aboutMe.html">关于我</a></li>
+            <li><a href="./time.html">时间轴</a></li>
             <li><a href="">博客导航</a></li>
             <li><a href="">留言</a></li>
         </ul>
-        <div class="search"></div>
+        <div class="iconfont icon-fangdajing"></div>
     </div>
 </div>
 
@@ -64,10 +70,10 @@
             <li>Email：dancesmiling@qq.com</li>
         </ul>
         <ul class="rightLink">
-            <li><a href="" class="first"></a></li>
-            <li><a href="" class="second"></a></li>
-            <li><a href="" class="third"></a></li>
-            <li><a href="" class="fourth"></a></li>
+            <li><a href="" class="iconfont icon-zhuye"></a></li>
+            <li><a href="" class="iconfont icon-youxiang-"></a></li>
+            <li><a href="" class="iconfont icon-icon"></a></li>
+            <li><a href="" class="iconfont icon-weixin"></a></li>
         </ul>
     </div>
 </div>
@@ -98,7 +104,7 @@
             <ul class="tabList">
                 <li class="hot">
                     <i></i>
-                    <a href="">安静地做一个爱设计的女子</a>
+                    <a href="./details.html">安静地做一个爱设计的女子</a>
                     <p>自从入了这行，很多人跟我说可以做网络教程，我也有考虑，但最终没有实现，因为我觉得在这个教程泛滥的时代，直接做一套免费的原创个人博客模板更为实在。每当看到自己喜欢的配色图片</p>
                 </li>
                 <li>
