--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     </style>
     <link rel="stylesheet" href="./css/index.css">
+    <script src="./js/index.js"></script>
+    <script src="./js/animate.js"></script>
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1194373_su7y8ewz5gi.css">
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1194373_sdwxh3wps08.css">
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1194373_df19ud7lv9.css">
@@ -20,7 +22,7 @@
     <div class="headerBox">
         <h1>闫慧敏个人博客</h1>
         <ul class="nav">
-            <li><a href="" style="color: #00c1de">网站首页</a></li>
+            <li><a href="" id="home">网站首页</a></li>
             <li><a href="./blogDiary.html">个人博客日记</a></li>
             <li><a href="">网站制作</a></li>
             <li><a href="">设计心得</a></li>
@@ -40,12 +42,12 @@
             <li><a href=""><img src="./image/1.jpg" alt=""></a></li>
             <li><a href=""><img src="./image/2.jpg" alt=""></a></li>
             <li><a href=""><img src="./image/3.jpg" alt=""></a></li>
-            <li><a href=""><img src="./image/4.jpg" alt=""></a></li>
+            <li style="z-index: 0"><a href=""><img src="./image/4.jpg" alt=""></a></li>
         </ul>
-        <div class="leftBtn"><a href=""><img src="./image/left.jpg" alt=""></a></div>
-        <div class="rightBtn"><a href=""><img src="./image/right.jpg" alt=""></a></div>
+        <div class="leftBtn"><img src="./image/left.jpg" alt=""></div>
+        <div class="rightBtn"><img src="./image/right.jpg" alt=""></div>
         <ul class="btnList">
-            <li></li>
+            <li class="lag"></li>
             <li></li>
             <li></li>
             <li></li>
@@ -82,11 +84,11 @@
 <div class="diary">
     <div class="diaryLeft">
         <ul class="diaryList">
-            <li><a href=""></a>个人博客日记</li>
-            <li>CSS3|Html5</li>
-            <li>网站建设</li>
-            <li>推荐工具</li>
-            <li>设计心得</li>
+            <a href="" class="hot" >个人博客日记</a>
+            <a href="">CSS3|Html5</a>
+            <a href="" >网站建设</a>
+            <a href="">推荐工具</a>
+            <a href="">设计心得</a>
         </ul>
         <div class="diaryTab">
             <ul class="tabImg">
@@ -110,22 +112,22 @@
                 <li>
                     <i></i>
                     <a href="">电话以外的宁静</a>
-                    <p></p>
+                    <p>自从入了这行，很多人跟我说可以做网络教程，我也有考虑，但最终没有实现，因为我觉得在这个教程泛滥的时代，直接做一套免费的原创个人博客模板更为实在。每当看到自己喜欢的配色图片</p>
                 </li>
                 <li>
                     <i></i>
                     <a href="">遇见一个未知的你</a>
-                    <p></p>
+                    <p>自从入了这行，很多人跟我说可以做网络教程，我也有考虑，但最终没有实现，因为我觉得在这个教程泛滥的时代，直接做一套免费的原创个人博客模板更为实在。每当看到自己喜欢的配色图片</p>
                 </li>
                 <li>
                     <i></i>
                     <a href="">安静地做一个爱设计的女子</a>
-                    <p></p>
+                    <p>自从入了这行，很多人跟我说可以做网络教程，我也有考虑，但最终没有实现，因为我觉得在这个教程泛滥的时代，直接做一套免费的原创个人博客模板更为实在。每当看到自己喜欢的配色图片</p>
                 </li>
                 <li>
                     <i></i>
                     <a href="">个人博客，属于我的小世界！</a>
-                    <p></p>
+                    <p>自从入了这行，很多人跟我说可以做网络教程，我也有考虑，但最终没有实现，因为我觉得在这个教程泛滥的时代，直接做一套免费的原创个人博客模板更为实在。每当看到自己喜欢的配色图片</p>
                 </li>
             </ul>
         </div>
