--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 <!--header-->
 <div class="header">
     <div class="headerBox">
-        <h1>闫慧敏个人博客</h1>
+        <h1 id="home">闫慧敏个人博客</h1>
         <ul class="nav">
-            <li><a href="" id="home">网站首页</a></li>
+            <li><a href="" style="color: #00c1de">网站首页</a></li>
             <li><a href="./blogDiary.html">个人博客日记</a></li>
             <li><a href="">网站制作</a></li>
             <li><a href="">设计心得</a></li>
