--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
 <div class="diary">
     <div class="diaryLeft">
         <ul class="diaryList">
-            <a href="" class="hot" >个人博客日记</a>
-            <a href="">CSS3|Html5</a>
-            <a href="" >网站建设</a>
-            <a href="">推荐工具</a>
-            <a href="">设计心得</a>
+            <a href="javascript:;" class="hot" >个人博客日记</a>
+            <a href="javascript:;">CSS3|Html5</a>
+            <a href="javascript:;" >网站建设</a>
+            <a href="javascript:;">推荐工具</a>
+            <a href="javascript:;">设计心得</a>
         </ul>
         <div class="diaryTab">
             <ul class="tabImg">
@@ -250,7 +250,7 @@
                             <a href="./image/1.jpg">设计心得</a>
                         </i>
                         <a href="" title="作为一个设计师,如果遭到质疑你是否能恪守自己的原则?">
-                            <img src="./image/r2.jpg" alt="作为一个设计师,如果遭到质疑你是否能恪守自己的原则?">
+                            <img aa="./image/r2.jpg" alt="作为一个设计师,如果遭到质疑你是否能恪守自己的原则?" class="lazyLoad">
                         </a>
                     </span>
                     <p class="pText">
@@ -273,7 +273,7 @@
                             <a href="./image/1.jpg">设计心得</a>
                         </i>
                         <a href="" title="作为一个设计师,如果遭到质疑你是否能恪守自己的原则?">
-                            <img src="./image/r3.jpg" alt="作为一个设计师,如果遭到质疑你是否能恪守自己的原则?">
+                            <img aa="./image/r3.jpg" alt="作为一个设计师,如果遭到质疑你是否能恪守自己的原则?" class="lazyLoad">
                         </a>
                     </span>
                     <p class="pText">
@@ -296,7 +296,7 @@
                             <a href="./image/1.jpg">设计心得</a>
                         </i>
                         <a href="" title="作为一个设计师,如果遭到质疑你是否能恪守自己的原则?">
-                            <img src="./image/r4.jpg" alt="作为一个设计师,如果遭到质疑你是否能恪守自己的原则?">
+                            <img aa="./image/r4.jpg" alt="作为一个设计师,如果遭到质疑你是否能恪守自己的原则?" class="lazyLoad">
                         </a>
                     </span>
                     <p class="pText">
@@ -319,7 +319,7 @@
                             <a href="./image/1.jpg">设计心得</a>
                         </i>
                         <a href="" title="作为一个设计师,如果遭到质疑你是否能恪守自己的原则?">
-                            <img src="./image/r5.jpg" alt="作为一个设计师,如果遭到质疑你是否能恪守自己的原则?">
+                            <img aa="./image/r5.jpg" alt="作为一个设计师,如果遭到质疑你是否能恪守自己的原则?" class="lazyLoad">
                         </a>
                     </span>
                     <p class="pText">
@@ -342,7 +342,7 @@
                             <a href="./image/1.jpg">设计心得</a>
                         </i>
                         <a href="" title="作为一个设计师,如果遭到质疑你是否能恪守自己的原则?">
-                            <img src="./image/11.jpg" alt="作为一个设计师,如果遭到质疑你是否能恪守自己的原则?">
+                            <img aa="./image/11.jpg" alt="作为一个设计师,如果遭到质疑你是否能恪守自己的原则?" class="lazyLoad">
                         </a>
                     </span>
                     <p class="pText">
@@ -365,7 +365,7 @@
                             <a href="./image/1.jpg">设计心得</a>
                         </i>
                         <a href="" title="作为一个设计师,如果遭到质疑你是否能恪守自己的原则?">
-                            <img src="./image/r7.jpg" alt="作为一个设计师,如果遭到质疑你是否能恪守自己的原则?">
+                            <img aa="./image/r7.jpg" alt="作为一个设计师,如果遭到质疑你是否能恪守自己的原则?" class="lazyLoad">
                         </a>
                     </span>
                     <p class="pText">
